--- a/SPQ/Content/Site.css
+++ b/SPQ/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+   
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -21,4 +22,294 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+li.dropdown.current-user .dropdown-toggle { padding:10px 4px 7px 9px }
+li.dropdown.current-user .dropdown-menu li a { border-bottom:none!important }
+        
+.navbar-user-img {
+    border-radius: 50%;
+     width: 34px;
+     height: 34px;
+     box-shadow: 0 0 5px 2px rgba(0,0,0,.1);
+     vertical-align: middle;
+}
+
+.navbar-user-img, .navbar-user-text, .pagination>li {
+     display: inline-block;
+}
+.navbar-brand {
+    background: url(../images/spotify-icon-x2.png) center / contain no-repeat;
+     width: 132px;
+    height: 36px;
+    margin-top:-2px;
+}
+.navbar-brand {
+    float: left;
+    height: 50px;
+    padding: 10px 10px;
+    font-size: 18px;
+    line-height: 20px;
+}
+body {
+    font-family: Circular,Helvetica,Arial,sans-serif !important;  
+    background-image: url("../../images/9579853-Silhouettes-color-s-de-gens-dansant-sur-un-fond-de-haut-parleur-grunge-Banque-d'images.jpg");
+}
+
+
+@media (min-width: 768px) {
+      
+    .featurette-heading {
+    font-size: 50px;
+    }
+}
+
+@media (min-width: 992px) {
+    .featurette-heading {
+    margin-top: 120px;
+    }
+}
+
+
+.container > .navbar-header {
+    margin-right: -15px;
+    margin-left: -10px;
+}
+
+.container {
+    padding-right: 15px;
+    padding-left: 15px;
+    padding-top: 12px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+
+.navbar-inverse .navbar-nav > li > a {
+    color: #FFF;       
+    line-height: 1.5;
+    font-size: 16px;
+    font-weight: 500;
+    padding-left:25px;
+}
+.navbar-inverse .navbar-nav > li > a:hover {
+    color: #2EBD59;
+    text-decoration: none;
+}
+
+@font-face {
+    font-family: Circular;
+    src: url(https://sp-bootstrap.global.ssl.fastly.net/7.3.0/fonts/circular-light.woff2) format('woff2'),url(https://sp-bootstrap.global.ssl.fastly.net/7.3.0/fonts/circular-light.woff) format('woff');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: Circular;
+    src: url(https://sp-bootstrap.global.ssl.fastly.net/7.3.0/fonts/circular-book.woff2) format('woff2'),url(https://sp-bootstrap.global.ssl.fastly.net/7.3.0/fonts/circular-book.woff) format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: Circular;
+    src: url(https://sp-bootstrap.global.ssl.fastly.net/7.3.0/fonts/circular-medium.woff2) format('woff2'),url(https://sp-bootstrap.global.ssl.fastly.net/7.3.0/fonts/circular-medium.woff) format('woff');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: Circular;
+    src: url(https://sp-bootstrap.global.ssl.fastly.net/7.3.0/fonts/circular-bold.woff2) format('woff2'),url(https://sp-bootstrap.global.ssl.fastly.net/7.3.0/fonts/circular-bold.woff) format('woff');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: Circular;
+    src: url(https://sp-bootstrap.global.ssl.fastly.net/7.3.0/fonts/circular-black.woff2) format('woff2'),url(https://sp-bootstrap.global.ssl.fastly.net/7.3.0/fonts/circular-black.woff) format('woff');
+    font-weight: 900;
+    font-style: normal;
+}
+
+
+li.dropdown.current-user .dropdown-toggle { padding:10px 4px 7px 9px }
+li.dropdown.current-user .dropdown-menu li a { border-bottom:none!important }
+.navbar-toggle { border:none; border-radius:0; margin-top:5px; margin-bottom:4px }
+.navbar-toggle span { font-size:16px }
+.circle-img {-moz-border-radius:100%; -webkit-border-radius:100%; border-radius:100% }
+
+
+@media (min-width: 992px){
+.navbar-user-img {
+    margin: -20px 12px -20px 0;
+    width: 40px;
+    height: 40px;
+}
+}
+
+.navbar-user-img {
+    border-radius: 50%;
+    width: 34px;
+    height: 34px;
+    box-shadow: 0 0 5px 2px rgba(0,0,0,.1);
+    vertical-align: middle;
+}
+
+.navbar-user-img, .navbar-user-text, .pagination>li {
+    display: inline-block;
+}
+
+
+
+
+.btn {
+    padding: 10px 47px;
+    font-size: 18px;
+    line-height: 1.5;
+    border-radius: 500px;
+    padding: 11px 47px 9px;
+    -webkit-transition: background-color .15s ease,border-color .15s ease,color .15s ease;
+    transition: background-color .15s ease,border-color .15s ease,color .15s ease;
+    border-width: 0;
+    letter-spacing: 1.2px;
+    min-width: 130px;
+    text-transform: uppercase;
+    white-space: normal;
+}
+
+.btn {
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    padding: 6px 12px;
+    font-size: 16px;
+    line-height: 1.5;
+    border-radius: 22px;
+    padding: 7px 12px 5px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.btn-sm {
+    font-size: 14px;
+    line-height: 1.5;
+    border-radius: 500px;
+    padding: 7px 35px;
+}
+
+.btn-default {
+  -webkit-border-radius: 500;
+  -moz-border-radius: 500;
+  border-radius: 500px;
+  font-family: Circular,Helvetica,Arial,sans-serif !important; 
+  color: #ffffff;
+  font-size: 16px;
+  background: #2e2f33;
+  padding: 10px 20px 10px 20px;
+  border: solid #adadad 0px;
+  text-decoration: none;
+  letter-spacing: 1.2px;
+}
+
+.btn-default:hover {
+  background: #46484e;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.btn-default.active, .btn-default:active {
+    background-color: #2e2f33;
+    box-shadow: none;
+}
+
+.btn-green {
+  -webkit-border-radius: 500;
+  -moz-border-radius: 500;
+  border-radius: 500px;
+  font-family: Circular,Helvetica,Arial,sans-serif !important; 
+  color: #ffffff;
+  font-size: 16px;
+  background: #2ebd59;
+  padding: 10px 20px 10px 20px;
+  border: solid #adadad 0px;
+  text-decoration: none;
+  letter-spacing: 1.2px;
+}
+
+.btn-green:hover {
+  background: #1ed760;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.myButton {
+	background-color:#2ebd59;
+	-moz-border-radius:29px;
+	-webkit-border-radius:29px;
+	border-radius:29px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family: Circular,Helvetica,Arial,sans-serif !important; 
+	font-size:16px;
+	padding: 16px 31px;
+	text-decoration:none;
+}
+.myButton:hover {
+	background-color:#1ed75f;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+footer {
+    font-family: sans-serif;
+    background-color: #1dbd19;
+    color: #f5f5f5;
+    padding: 10px;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    /* width: 100%; */
+    /* height: 60px; */
+}
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4,  .h6, p {
+    color: red;
+}
+h5, .h5 {
+    font-size: 14px;
+    color:brown
+}
+th{
+    color:royalblue;
+}
+td,a.link{
+    color:brown
+}
+.navbar-default {
+    background-color: #1dbd19;
+    border-color: #41bb43;
+}
+.navbar-default .navbar-nav > li > a {
+    color:black;
+    font-size:medium;
+    margin-left:20px;
+        
+}
+.text-muted {
+    color: #4956bb;
+}
+.img-responsive {
+    width: 350px;
+    
 }
