--- a/SPQ/Views/Home/Index.cshtml
+++ b/SPQ/Views/Home/Index.cshtml
@@ -1,31 +1,195 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿
+@{
+    Layout = null;
 }
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Index</title>
+    <link rel="shortcut icon" href="~/favicon.ico">
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <style>
+        body {
+            font-family: Circular,Helvetica,Arial,sans-serif;
+            font-size: 16px;
+            line-height: 1.5;
+            color: #2e2f33;
+            background-color: #fff;
+            background: url('../../images/Paint theme 3.jpg') no-repeat center center fixed; 
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover; 
+        }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+        .head {
+            border-bottom: 1px solid #d9dadc;
+            padding: 25px 0 10px;
+            margin-bottom: 30px;
+            text-align: center;
+        }
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+            .head.small {
+                padding: 10px 0 10px;
+            }
+
+        .small, small {
+            font-size: 87%;
+        }
+
+        .head.small .spotify-logo {
+            width: 125px;
+        }
+
+        .head .spotify-logo {
+            background-image: url('');
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+            background-size: 100%;
+            display: inline-block;
+            max-width: 100%;
+            width: 200px;
+        }
+
+        .container-fluid {
+            margin-right: auto;
+            margin-left: auto;
+            padding-left: 15px;
+            padding-right: 15px;
+        }
+
+        .content {
+            margin: 0 auto;
+            max-width: 450px;
+        }
+
+        .client-info {
+            margin: 20px auto 25px;
+            font-size: 23px;
+            line-height: 29px;
+            max-width: 300px;
+        }
+
+        .client-name {
+            font-size: 24px;
+            line-height: 29px;
+            font-weight: 400;
+            text-align: center;
+        }
+
+        .lead {
+            margin-bottom: 24px;
+            font-size: 18px;
+            font-weight: 300;
+            line-height: 1.4;
+        }
+
+        .conectar {
+            @*margin-left: 115px;
+            *@ width: 47.5%;
+            min-width: 50px;
+        }
+
+        .btn-sm {
+            font-size: 14px;
+            line-height: 1.5;
+            border-radius: 500px;
+            padding: 7px 35px;
+        }
+
+        .btn-green {
+            color: #fff;
+            background-color: #2ebd59;
+        }
+
+            .btn-green:hover {
+                color: #fff;
+                background-color: #1ed760;
+            }
+
+            .btn-green:focus {
+                color: #fff;
+                background-color: #2ebd59;
+                box-shadow: inset 0 0 0 2px hsla(0,0%,100%,.7);
+            }
+
+            .btn-green.active, .btn-green:active {
+                background-color: #2ebd59;
+                box-shadow: none;
+            }
+
+        .btn {
+            padding: 10px 47px;
+            font-size: 18px;
+            line-height: 1.5;
+            border-radius: 500px;
+            padding: 11px 47px 9px;
+            -webkit-transition: background-color .15s ease,border-color .15s ease,color .15s ease;
+            transition: background-color .15s ease,border-color .15s ease,color .15s ease;
+            border-width: 0;
+            letter-spacing: 1.2px;
+            min-width: 130px;
+            text-transform: uppercase;
+            white-space: normal;
+        }
+
+        .btn {
+            display: inline-block;
+            margin-bottom: 0;
+            font-weight: 500;
+            text-align: center;
+            vertical-align: middle;
+            touch-action: manipulation;
+            cursor: pointer;
+            background-image: none;
+            border: 1px solid transparent;
+            white-space: nowrap;
+            padding: 6px 12px;
+            font-size: 16px;
+            line-height: 1.5;
+            border-radius: 22px;
+            padding: 7px 12px 5px;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
+    </style>
+</head>
+<div style="background-color: rgba(241, 241, 241, 0.82);;padding:3%;margin-top:3%;border-radius:5px">
+    <body class="container body-content">
+        <div class="head small">
+            <a class="spotify-logo">
+                <img alt="logo" class="imagem-logo" src="~/images/spotify-logo.jpg" />
+               
+            </a>
+        </div>
+        <div class="container-fluid">
+            <div class="content">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <div class="client-info">
+                            <h2 class="client-name"> Connect to your Spotify account  </h2>
+                        </div>
+                        <p class="lead text-center">
+                            Export  your playlists,albums and artists.
+                            @*An app for export data from your playlists, your tracks, your followers and following, personal profile, etc.*@
+                        </p>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="text-center">
+                            <a href="@ViewBag.AuthorizationUri" class="btn btn-sm btn-green conectar">Connect </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 </div>
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap")
+    </body>
+</html>
