--- a/SPQ/Views/Shared/_Layout.cshtml
+++ b/SPQ/Views/Shared/_Layout.cshtml
@@ -6,10 +6,11 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <script src="~/Scripts/ie-emulation-modes-warning.js"></script>
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -17,13 +18,28 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <a class="navbar-brand navbar-left" href="@Url.Action("Index", "Playlist")"></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Albums", "Index", "Albums")</li>
+                    <li>@Html.ActionLink("Artists", "Index", "Artists")</li>
+                    <li>@Html.ActionLink("Songs", "Index", "Tracks")</li>
+                    <li>@Html.ActionLink("Saved Albums", "SavedAlbums", "Albums")</li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <img src="@Session["UserImage"]" class="user-img img-circle navbar-user-img" alt="">
+                            <span class="username">@Session["UserId"]</span>
+                            <i class="fa fa-angle-down" aria-hidden="true"></i>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="@Url.Action("Index", "Profile")">
+                                    My account
+
+                                </a>
+                            </li>
+                        </ul>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -32,9 +48,9 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+        @*<footer class="site-footer">
+            <p>&copy; @DateTime.Now.Year - Mohamad Maher Kouniehle</p>
+        </footer>*@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
